--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=eCXD0PkgxK0"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=nUCP0hmiq-Y"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -33,8 +33,8 @@
             <a href="https://www.youtube.com/watch?v=1Zk6mX5sLhg">
                 <img src="https://img.youtube.com/vi/1Zk6mX5sLhg/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=voHkMen3h68">
+                <img src="https://img.youtube.com/vi/voHkMen3h68/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
