--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="https://img.youtube.com/vi/1Zk6mX5sLhg/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=voHkMen3h68">
-                <img src="https://img.youtube.com/vi/voHkMen3h68/maxresdefault.jpg" />
+                <img src="https://img.youtube.com/vi/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
